# haskellbook

./: LICENSE  README.md
ch10/: scanExercises.hs  warmupReview.hs
ch11/: asPatterns.hs  binaryTree.hs  capitalize.hs  doggies.hs  huttonsRazor.hs  normalForm.hs  numberOrBool.hs  personRecord.hs  phone.hs  programmer.hs  tooMany.hs  vehicles.hs  vigenere.hs
ch12/: binaryTree.hs  libEither.hs  libMaybe.hs  nat.hs  stringProcessing.hs  unfolds.hs  validateWord.hs
ch13/: forever.hs  person.hs
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Main.hs
ch13/hello/: hello.cabal
ch13/hello/src/: DogsRule.hs  Hello.hs
ch14/addition/: Addition.hs  addition.cabal
ch14/ch14/: ch14.cabal
ch14/ch14/src/: Fool.hs
ch14/ch14/tests/: TestingQuickCheck.hs  WordNumberTest.hs
ch14/morse/: morse.cabal
ch14/morse/src/: Main.hs  Morse.hs
ch15/: bull.hs  ch15.hs  first.hs  mem.hs  optional.hs
ch15/orphan-instance/: ListyInstances.hs
ch2/: learn.hs
ch3/: print2.hs  print3.hs  print3broken.hs  transformations.hs
ch4/: ch4.hs  mood.hs
ch5/: arith3broken.hs  determineTheType.hs  doesItCompile.hs  parametricity.hs  typeFunctions.hs  typeKwonDo.hs  typeSigs.hs
ch6/: dayOfWeek.hs  doesItTypecheck.hs  eqInstances.hs  identity.hs  matchTheTypes.hs  trivial.hs  typeKwonDo2.hs
ch7/: arith2.hs  arith4.hs  casePractice.hs  ch7.hs  penguin.hs  registeredUser.hs  varietyPack.hs
ch8/: wordNumber.hs
ch9/: cipher.hs  dataChar.hs  enumFromTo.hs  mapBool.hs  myStdlib.hs  myWords.hs  myZip.hs  poemLines.hs  safeListOps.hs  squareCube.hs
