name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Evan Savage's implementation of Hangman from Haskellbook.
homepage:            https://github.com/candu/haskellbook
license:             BSD3
license-file:        LICENSE
author:              Evan Savage
maintainer:          https://github.com/candu
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , random
                     , split
                     , zlib
