name:                ch14
version:             0.1.0.0
license-file:        LICENSE
author:              Evan Savage
maintainer:          evan@savageinter.net
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     WordNumber
                     , Fool
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite WordNumberTest
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             WordNumberTest.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , ch14
                     , QuickCheck
  default-language:    Haskell2010

test-suite TestingQuickCheck
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             TestingQuickCheck.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010